# EinkPhotoFrame

./: .gitignore  README.md  dittering.py  pyproject.toml
arduino/certs/: filetoarray.py
arduino/firmware/: firmware.ino
go/: api.go  ditter.go  go.mod  go.sum  utils.go
go/src/: .env  api.go  dither.go  go.mod  go.sum  utils.go
python/: pyproject.toml
server/: database.go  handlers.go  main.go  models.go
