[project]
name = "photoframeserver"
version = "0.1.0"
description = ""
authors = [{ name = "HighDoping", email = "highdoping@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
package-mode = false
dependencies = ["scikit-learn (>=1.7.0,<2.0.0)", "numpy (>=2.3.1,<3.0.0)", "pillow (>=11.2.1,<12.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
